# lifeblood-manager

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile.x86_64-pc-windows-gnu  Dockerfile.x86_64-unknown-linux-gnu  README.md  build.rs  rc.rc
.github/workflows/: make_release.yml  release-notify.yml  test-test-delme.yml  test.yml
src/: autostart.rs  config_data.rs  config_data_collection.rs  envres_config_widget.rs  info_dialog.rs  installation_data.rs  installation_helpers.rs  installation_widget.rs  launch_data.rs  launch_widget.rs  lib.rs  main.rs  main_widget_config.rs  running_process_data.rs  theme.rs  tray_manager.rs  widgets.rs  win_console_hack.rs
src/proc/: mod.rs  unix.rs  win.rs
src/wizard/: houdini_utils.rs  mod.rs  wizard.rs  wizard_activity.rs  wizard_activity_runner.rs  wizard_data.rs  wizard_data_from_config.rs  wizard_data_serde_common.rs  wizard_data_to_config.rs  wizard_for_only_tools.rs
src/wizard/activities/: dbpath.rs  dcctypes.rs  findblender.rs  findhoudini.rs  findredshift.rs  gpudevices.rs  houdiniplugins.rs  intro.rs  mod.rs  scratchpath.rs  summary.rs
systemd-service/: CONFIG.ME  README.md  install.sh  lifeblood.service.template
tests/: test_envres.rs  test_insdata.rs  test_launch_data.rs  test_launch_process.rs
tests/data/l_struct1/: current  proc_exit_1  proc_exit_1.cmd  proc_exit_arg  proc_exit_arg.cmd  proc_exit_clean  proc_exit_clean.cmd
tests/data/l_struct1/hash1/: meta.info
tests/data/u_struct1/: lifeblood_viewer
tests/data/u_struct1/hash2/: meta.info
tests/data/u_struct2/: current  lifeblood
tests/data/u_struct2/hash3/: meta.info
tests/data/u_struct3/hash1/: meta.info
tests/data/u_struct3/hash2/: meta.info
tests/data/u_struct3/hash3/: meta.info
