[package]
name = "lifeblood-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.4", features = ["fltk-bundled"] }
downloader = "^0.2.7"
rand = "^0.8.5"
zip = "^0.6.6"
fs_extra = "^1.3.0"
chrono = "^0.4.31"