[package]
name = "lifeblood-manager"
version = "0.1.0"
edition = "2021"

[features]
ui = [
    "dep:fltk",
    "dep:tray-item",
    "dep:embed-resource",
    "dep:auto-launch",
]

[[bin]]
name = "lifeblood-manager"
required-features = ["ui"]

[[bin]]
name = "lifeblood-manager-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "1.4", features = ["fltk-bundled"], optional=true}
tempfile = "3.12"
downloader = "0.2.7"
dunce = "1.0"
rand = "0.8.5"
zip = "0.6.6"
fs_extra = "1.3.0"
chrono = "0.4.31"
toml = "0.8"
home = "0.5"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
auto-launch = { version = "0.5", optional=true }

[target.'cfg(not(windows))'.dependencies]
tray-item = { version = "0.10.0", features = ["ksni"], optional=true }

[target.'cfg(windows)'.dependencies]
winconsole = { version = "0.11", features = [ "window" ]}
tray-item = { version = "0.10.0", optional=true}

[target.'cfg(windows)'.build-dependencies]
embed-resource = { version = "2.5", optional=true }